Finished infrastructure for Swagger API documentation. Run 'npm run swagger-autogen' to update teh swagger.json file (and to reflect any changes you've made to the API documentation).
